--- a/InstructorCourses/src/main/resources/templates/courses/list-courses.html
+++ b/InstructorCourses/src/main/resources/templates/courses/list-courses.html
@@ -59,6 +59,10 @@
 					   onclick="if (!(confirm('Are you sure you want to delete this course?'))) return false">
 						Delete
 					</a>
+					<a th:href="@{/students/studentList(courseId=${tempCourse.id})}"
+					   class="btn btn-info btn-sm">
+						Information
+					</a>
 					
 				</td>
 				
