--- a/InstructorCourses/src/main/resources/templates/courses/list-students.html
+++ b/InstructorCourses/src/main/resources/templates/courses/list-students.html
@@ -14,7 +14,62 @@
 </head>
 
 <body>
-	It works!
-</body>
 
+<div class="container">
+
+	<h3>Student Directory</h3>
+	<hr>
+	
+	<!-- Add a button -->
+	<a th:href="@{/students/showFormForAddStudents}"
+		class="btn btn-primary btn-sm mb-3">
+		Add Student
+	</a>
+	
+	
+	<table class="table table-bordered table-striped">
+		<thead class="thead-dark">
+			<tr>
+				<th>ID</th>
+				<th>Name</th>
+				<th>Year Of Registration</th>
+				<th>Semester</th>
+			</tr>
+		</thead>
+		
+		<tbody>
+			<tr th:each="tempStudent : ${students}">
+				<td th:text="${tempStudent.id}" />
+				<td th:text="${tempStudent.name}" />	
+				<td th:text="${tempStudent.yearOfRegistration}" />	
+				<td th:text="${tempStudent.semester}" />		
+				
+				<td>
+					<!-- Add "update" button/link -->
+					<a th:href="@{/students/showFormForUpdateStudents(studentId=${tempStudent.id})}"
+					   class="btn btn-info btn-sm">
+						Update
+					</a>
+					
+					<!-- Add "delete" button/link -->					
+					<a th:href="@{/students/deleteStudent(studentId=${tempStudent.id})}"
+					   class="btn btn-danger btn-sm"
+					   onclick="if (!(confirm('Are you sure you want to delete this student?'))) return false">
+						Delete
+					</a>
+					
+					
+				</td>
+				
+				
+			</tr>
+		</tbody>		
+	</table>
+	
+</div>
+	
+</body>
 </html>
+
+
+
