--- a/InstructorCourses/src/main/resources/templates/student-form.html
+++ b/InstructorCourses/src/main/resources/templates/student-form.html
@@ -40,7 +40,7 @@
 		</form>
 		<hr>
 		<h6>
-		<a th:href="@{/students/studentList}">Back to Students List</a>
+		<a href="javascript:history.back()">Back to Students List</a>
 		<h6>
 		<a th:href="@{/courses/list}">Back to Courses List</a>
 	</div>
