--- a/InstructorCourses/src/main/resources/templates/Confirmation.html
+++ b/InstructorCourses/src/main/resources/templates/Confirmation.html
@@ -1,23 +1,28 @@
-<!DOCTYPE html>
-<html>
-<head>
-   <meta charset="utf-8">
-   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+<!DOCTYPE HTML>
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 
-   <!-- Bootstrap CSS -->
-   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
+
+<head>
+    <!-- Required meta tags -->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
+
+	
 
 <title>Successful Deletion</title>
 
 </head>
 <body>
 	<br>
-    <h2><center>Student has been deleted!</center></h2>
+    <h2><center>Student has been deleted succesfully</center></h2>
     <hr>
     <form>
 	<div style="text-align:center">  
-		<input type="button" value="Back to Students Managment" onclick="history.go(-1)" 
-			style="border-radius: 4px; cursor:pointer; background-color:blue; border-color:blue; color:white">
+		<input type="button" value="Back to Students List" onclick="history.go(-1)" 
+			class="btn btn-primary btn-sm mb-3">
 	</div>
 	</form>
     
