--- a/InstructorCourses/src/main/resources/templates/course-form.html
+++ b/InstructorCourses/src/main/resources/templates/course-form.html
@@ -37,6 +37,10 @@
 					class="form-control mb-4 col-4" placeholder="Year">
 			<input type="text" th:field="*{semester}"
 					class="form-control mb-4 col-4" placeholder="Semester">
+			<input type="text" th:field="*{projectpercentage}"
+					class="form-control mb-4 col-4" placeholder="Project Percentage">
+			<input type="text" th:field="*{exampercentage}"
+					class="form-control mb-4 col-4" placeholder="Exam Percentage">
 				
 			<button type="submit" class="btn btn-info col-2">Save</button>
 						
