--- a/InstructorCourses/src/main/resources/templates/student-form.html
+++ b/InstructorCourses/src/main/resources/templates/student-form.html
@@ -34,6 +34,13 @@
 					class="form-control mb-4 col-4" placeholder="Year of Registration">
 			<input type="text" th:field="*{semester}"
 					class="form-control mb-4 col-4" placeholder="Semester">
+			<input type="text" th:field="*{projectgrade}"
+					class="form-control mb-4 col-4" placeholder="Project Grade">
+			<input type="text" th:field="*{examgrade}"
+					class="form-control mb-4 col-4" placeholder="Exam Grade">
+			<input type="hidden" th:field="*{finalgrade}"
+					class="form-control mb-4 col-4" placeholder="Final Grade">
+			
 				
 			<button type="submit" class="btn btn-info col-2">Save</button>
 						
