--- a/InstructorCourses/src/main/resources/templates/list-courses.html
+++ b/InstructorCourses/src/main/resources/templates/list-courses.html
@@ -71,6 +71,10 @@
 					   class="btn btn-info btn-sm">
 						All Grades
 					</a>
+					<a th:href="@{/courses/stats(courseId=${tempCourse.id})}"
+					   class="btn btn-info btn-sm">
+						Statistics
+					</a>
 					
 					
 				</td>
